runhello/hello.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-go
  labels:
    app: hello-go

spec:
  replicas: 1
  # spec.selector defines how the created ReplicaSet finds pods to manage. 
  # In this case it must matchLabels defined in the pod template app:hello_go
  selector:
    matchLabels:
      podname: hello-go
  # the template for each pod
  template:
    metadata:
      # the label for the pod
      labels:
        podname: hello-go
    # the spec for the template    
    spec:
      #serviceAccountName: hello-go
      containers:
        - name: hello-go-container
          image: smartmarketingreports/sandpit:km_k8shello_v1          
          ports:
            - name: web
              # the port to expose from the container - for information only
              containerPort: 8100
