runhello/hello-service.yml
# defines a logical set of Pods and a policy by which to access them
# https://kubernetes.io/docs/concepts/services-networking/service/
# this means that when kubernetes spins up or recreates pods as things change
# the connectivity doesn't die with this.
# each pod gets its own IP address.
#
kind: Service
apiVersion: v1
metadata:
  name: hello-service

spec:
  selector:
    # target any pod with label podname: hello-go
    podname: hello-go
    # the next label matches that in the ingress load balancer to form the connection for "listening"
    #k8s-app: traefik-ingress-lb
  # type NodePort - creates a ClusterIP as to make it accessible from outside the cluster    
  #type: NodePort
  #
  # make it only accessible from within the cluster via an Ingress or Gateway API
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      # the port one the service listens on
      port: 80
      # the targetPort is the port that the docker container listens on
      targetPort: 8100
# having a selector means the Endpoint slice is created automatically
